<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="25dp"
  tools:context=".EmployeeForm">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_nombre"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldApellidop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_apellidop"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldApellidom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_apellidom"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldCalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_calle"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_numero"
        android:inputType="number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldColonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_colonia"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldCp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_cp"
        android:inputType="number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_telefono"
        android:inputType="phone"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldRfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_rfc"
        android:inputType="text"/>



  </LinearLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/form_buttonSave"
    android:text="@string/button_save"
    android:layout_alignParentBottom="true"
    android:minHeight="60dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

</RelativeLayout>