<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="25dp"
  tools:context=".EmployeeForm">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_nombre"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldApellidop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_apellidop"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldApellidom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_apellidom"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldCalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_calle"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_numero"
        android:enabled="false"
        android:focusable="false"
        android:inputType="number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldColonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_colonia"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldCp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_cp"
        android:enabled="false"
        android:focusable="false"
        android:inputType="number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_telefono"
        android:enabled="false"
        android:focusable="false"
        android:inputType="phone"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldRfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_rfc"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldEstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:enabled="false"
        android:focusable="false"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Descripcion"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:entries="@array/spinner" />

    <com.google.android.material.button.MaterialButton

      android:id="@+id/btnGuardarEstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cambiar Estatus" />

  </LinearLayout>




</RelativeLayout>