<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/employeeListItem_nombre"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:text="@string/form_nombre"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/employeeListItem_apellidop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:paddingBottom="20dp"
    android:text="@string/form_apellidop"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/employeeListItem_nombre" />

  <TextView
      android:id="@+id/employeeListItem_apellidom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="42dp"
      android:paddingBottom="20dp"
      android:text="@string/form_apellidom"
      android:textSize="16sp"
      app:layout_constraintStart_toEndOf="@+id/employeeListItem_apellidop"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/employeeListItem_estatus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:text="@string/estatus"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="#C2C2C2"
    app:layout_constraintTop_toBottomOf="@id/employeeListItem_apellidop" />

</androidx.constraintlayout.widget.ConstraintLayout>